--- a/src/app/pages/estatistica/estatistica.page.html
+++ b/src/app/pages/estatistica/estatistica.page.html
@@ -37,6 +37,14 @@
       <canvas #barChartLocalCorpo></canvas>
     </ion-card-content>
   </ion-card>
+  <ion-card class="welcome-card">
+    <ion-card-header>
+      <ion-card-title>Pontos por zona da pista</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #barChartZona></canvas>
+    </ion-card-content>
+  </ion-card>
 
 
 </ion-content>
