--- a/src/app/pages/registra-lutadores/registra-lutadores.page.scss
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.scss
@@ -12,7 +12,7 @@ ion-title{
     font-weight: bold;
     width: 80%;
     margin: auto;
-}
+} 
 
 ion-toolbar ion-button{
     position: absolute;
@@ -38,7 +38,8 @@ div>ion-button{
     font-weight: 900;
     --padding-top: 13%;
     --padding-bottom: 13%;
-    width: 37%;
+    width: 40%;
+    font-size: 3vw;
     
 }
 #etapa_eliminatoria_buttons_top>ion-button{
