--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -24,7 +24,7 @@
   </ion-button> 
   <br>
   <ion-button id="bt_minhas_estatisticas" (click)="estatistica()"  shape="round" color="tertiary">
-    Minhas estatisticas
+    Minhas Estatisticas
   </ion-button> 
 </ion-content>
 
