Ajuste na visualização dos graficos do relatorio da luta

--- a/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
+++ b/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
@@ -92,8 +92,8 @@
   </ion-item>
 
   <ion-item lines="none" >
-    <ion-label slot="start">Taticamente disciplinado</ion-label> 
-    <ion-label  slot="end">Taticamente indisciplinado</ion-label>
+    <ion-label slot="start">Taticamente <br> disciplinado</ion-label> 
+    <ion-label  slot="end" class="label_end_maior_maior">Taticamente <br> indisciplinado</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
     <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmenttaticamenteDisciplinado_taticamenteIndisciplinado($event)" mode="ios">
