--- a/src/app/pages/comportamento-oponente/comportamento-oponente.page.scss
+++ b/src/app/pages/comportamento-oponente/comportamento-oponente.page.scss
@@ -56,6 +56,9 @@ ion-item ion-label{
 .label_end_maior{
     margin-left: -40%;
 }
+.label_end_maior_maior{
+    margin-left: -60%;
+}
 ion-content ion-icon{
     font-size: 70%;
     border-radius: 30px ;
