Ajuste de recursividade na tela de luta

--- a/src/app/pages/luta/luta.page.html
+++ b/src/app/pages/luta/luta.page.html
@@ -368,8 +368,8 @@ height="0">
           </ion-label>
         </ion-item>
       </ion-col >
-      <ion-col class="ion-align-self-center">
-        <ion-label> 
+      <ion-col class="ion-text-center">
+        <ion-label>
           X  
         </ion-label>
       </ion-col>
