--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -22,45 +22,242 @@ ion-toolbar{
   color : var(--ion-color-primary);
 }
 .concluir{
-    position: absolute;
-    margin-top: -9.5%;
-    right: 0%;
-    --background: var(--ion-color-secondary);
-    font-size: 70%;
-    height: 60%;
-    width: 20%;
+  position: absolute;
+  margin-top: -9.5%;
+  right: 0%;
+  --background: var(--ion-color-secondary);
+  font-size: 70%;
+  height: 60%;
+  width: 20%;
 }
 .concluir-popup{
   --background: var(--ion-color-secondary);
 }
 
 #labels{
-// position: static;
-    margin-top: 65%;
+  // position: static;
+  margin-top: 65%;
+  padding: 0;
+  text-align: center;
+  font-size: 4vw;
+} 
+
+
+.Ataques{
+  position: static;
+  margin-top: 2%;
+  
+  ion-row{
+    height: 50px;
+  }
+  ion-col{
+    width: 45%;
+    height: 50px;
     text-align: center;
-    font-size: 4vw;
+    padding: 0.5%;
+  }
+  ion-button{
+    height: 100%;
+    width: 90%;
+    font-size: 3vw;
+    
+  }
 }
+
+.movimento{
+  margin-top: -2%;
+  font-size: 65%;
+  width: 84%;
+  height: 50px;
+  --border-color: var(--ion-color-primary);
+  --border-style: solid ;
+  --background: var(--ion-color-tertiary);
+  color: var(--ion-color-primary);
+  font-weight: 900;
+  font-size: 90%;
+  letter-spacing: -1px;
+}
+
+#movimentos {
+  width: 100%;
+  height: 20%;
+}
+#movimentos ion-col{
+  text-align: center;
+}
+#movimentos ion-button{
+  --border-radius: 30px;
+  height: 130%;
+  padding: 0%;
+}
+
+
+.arena{
+  ion-grid{
+    height: 20%;
+    margin-left: 7%;
+  }
+  ion-grid>ion-row{
+    width: 80%;
+    margin: auto;
+  }
+  ion-grid>ion-row>ion-col{
+    padding: 0%;
+  }
+  ion-button{
+    width: 100%;
+    --border-color: var(--ion-color-primary);
+    --border-style: solid ;
+    --border-radius: 10px;
+  }
+}
+
 @media(max-height: 568px){
   #labels{
     // position: static;
-        margin-top: 45%;
+    margin-top: 45%;
+  }
+  .Ataques{
+    position: static;
+    margin-top: 2%;
+    
+    ion-row{
+      height: 35px;
     }
+    ion-col{
+      width: 45%;
+      height: 35px;
+      text-align: center;
+      padding: 0.5%;
+    }
+    ion-button{
+      height: 100%;
+      width: 90%;
+      font-size: 3vw;
+      
+    }
+  }
+  .arena{
+    ion-grid{
+      margin-left: 7%;
+      margin-top: -2%;
+    }
+    ion-row{
+      height: 25px;
+      width: 80%;
+      margin: auto;
+    }
+    ion-col{
+      height: 25px;
+      padding: 0%;
+    }
+    ion-button{
+      width: 100%;
+      height: 100%;
+      --border-color: var(--ion-color-primary);
+      --border-style: solid ;
+      --border-radius: 10px;
+    }
+  } 
+  #movimentos {
+    width: 100%;
+    height: 5%;
+    ion-col{
+      text-align: center;
+      width: 50%;
+    }
+    ion-button{
+      --border-radius: 30px;
+      height: 15%;
+      width: 105%;
+      padding: 0%;
+    }
+    
+  } 
+  
 }
 @media(max-height: 640px){
   #labels{
     // position: static;
-        margin-top: 50%;
+    margin-top: 50%;
+  }
+  .Ataques{
+    position: static;
+    margin-top: 2%;
+    
+    ion-row{
+      height: 35px;
     }
+    ion-col{
+      width: 45%;
+      height: 35px;
+      text-align: center;
+      padding: 0.5%;
+    }
+    ion-button{
+      height: 100%;
+      width: 90%;
+      font-size: 3vw;
+      
+    }
+  }
+  .arena{
+    ion-grid{
+      margin-left: 7%;
+      margin-top: -2%;
+    }
+    ion-row{
+      // height: 10px;
+      width: 80%;
+      margin: auto;
+    }
+    ion-col{
+      // height: 10px;
+      padding: 0%;
+    }
+    ion-button{
+      width: 100%;
+      --border-color: var(--ion-color-primary);
+      --border-style: solid ;
+      --border-radius: 10px;
+    }
+  } 
+  #movimentos {
+    width: 100%;
+    height: 20%;
+    ion-col{
+      text-align: center;
+      width: 50%;
+    }
+    ion-button{
+      --border-radius: 30px;
+      height: 95%;
+      width: 105%;
+      padding: 0%;
+    }
+    
+  }
 }
 @media(max-height: 731px){
   #labels{
     // position: static;
-        margin-top: 52%;
-    }
+    margin-top: 52%;
+  }
 }
 #grid_pontos_lutadores{
   margin-top: -3%;
+  padding: 0;
+  ion-col{
+    padding-top: 0;
+    padding-bottom: 0;
+    
+  }
 }
+
+.ion-text-center{
+  margin-top: 5%;
+}
+
 
 ion-item{
   --highlight-height: 0;
@@ -92,41 +289,6 @@ ion-item div.item-native{
 }
 #pontosOponente{
   margin-left: -50%;
-}
-
-.Ataques{
-position: static;
-margin-top: 2%;
-
-ion-row{
-  height: 50px;
-}
-ion-button{
-  height: 100%;
-  width: 90%;
-  font-size: 3vw;
-
-}
-}
-.Ataques>ion-grid>ion-row>ion-col{
- width: 45%;
- height: 50px;
- text-align: center;
- padding: 0.5%;
-}
-
-.movimento{
-  margin-top: -2%;
-    font-size: 65%;
-    width: 84%;
-    height: 50px;
-    --border-color: var(--ion-color-primary);
-    --border-style: solid ;
-    --background: var(--ion-color-tertiary);
-    color: var(--ion-color-primary);
-    font-weight: 900;
-    font-size: 90%;
-    letter-spacing: -1px;
 }
 
 #ataque1{
@@ -169,23 +331,6 @@ ion-button{
   
 }
 
-.arena>ion-grid{
-    height: 20%;
-    margin-left: 7%;
-}
-.arena>ion-grid>ion-row{
-  width: 80%;
-  margin: auto;
-}
-.arena>ion-grid>ion-row>ion-col{
-    padding: 0%;
-}
-.arena ion-button{
-  width: 100%;
-  --border-color: var(--ion-color-primary);
-  --border-style: solid ;
-  --border-radius: 10px;
-}
 #alertacol{
   padding-right: 11.5%;
 }
@@ -194,25 +339,13 @@ ion-button{
 }
 .normal{
   --background : var(--ion-color-tertiary);
-
+  
 }
 #ef1{
   margin-left: 40% ;
 }
 #botao_trocar_lados{
   color:  var(--ion-color-primary);
-}
-#movimentos {
-  width: 100%;
-  height: 20%;
-}
-#movimentos ion-col{
-  text-align: center;
-}
-#movimentos ion-button{
- --border-radius: 30px;
- height: 130%;
- padding: 0%;
 }
 
 // Formata botões com Clip:path
@@ -221,53 +354,53 @@ clipPath{
   transform:scale(0.004195862879,0.005554321262);
 }
 #localCorpo1 {
-    
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
+  
+  position: absolute;
+  margin-top: -2%;
+  margin-left: 9%;
+  width: 70%;
+  height: 40%;
+  
+  clip-path: url(#cab1);
+}
 
-    clip-path: url(#cab1);
-  }
-  
-  #localCorpo2{ 
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgtronco1);
-  }
-  
-  #localCorpo3{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgbracoesquerdo1);
-  }
-  
-  #localCorpo4{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgmaoesquerda1);
-  }
-  
-  #localCorpo5{  //bracodireito1 -->
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgbracodireito1);
-  }
-  
-  // #maodireita1{
+#localCorpo2{ 
+  position: absolute;
+  margin-top: -2%;
+  margin-left: 9%;
+  width: 70%;
+  height: 40%;
+  clip-path: url(#svgtronco1);
+}
+
+#localCorpo3{
+  position: absolute;
+  margin-top: -2%;
+  margin-left: 9%;
+  width: 70%;
+  height: 40%;
+  clip-path: url(#svgbracoesquerdo1);
+}
+
+#localCorpo4{
+  position: absolute;
+  margin-top: -2%;
+  margin-left: 9%;
+  width: 70%;
+  height: 40%;
+  clip-path: url(#svgmaoesquerda1);
+}
+
+#localCorpo5{  //bracodireito1 -->
+  position: absolute;
+  margin-top: -2%;
+  margin-left: 9%;
+  width: 70%;
+  height: 40%;
+  clip-path: url(#svgbracodireito1);
+}
+
+// #maodireita1{
   #localCorpo6{
     position: absolute;
     margin-top: -2%;
@@ -278,147 +411,147 @@ clipPath{
   }
   
   // #pernaesquerda1{
-  #localCorpo7{
-    position: absolute; 
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpernaesquerda1);
-  }
-  
-  // #pernadireita1{
-  #localCorpo8{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpernadireita1);
-  }
-  
-  // #peesquerdo1{
-  #localCorpo9{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpeesquerdo1);
-  
-  }
-  
-  #localCorpo10{
-  // #pedireito1{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 9%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpedireito1);
-  
-  }
-  
-  // #clipped2 {
-  #localCorpo11{
-  position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#cab2);
-  }
-  
-  #localCorpo12{ 
-  // #tronco2{ 
-    position: absolute;
-    margin-left: 25%;
-    margin-top: -2%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgtronco2);
-  }
-  
-  // #bracoesquerdo2{
-  #localCorpo13{
-    position: absolute;
-    margin-left: 25%;
-    margin-top: -2%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgbracoesquerdo2);
-  }
-  
-  // #maoesquerda2{
-  #localCorpo14{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgmaoesquerda2);
-  }
-  
-  #localCorpo15{
-  // #bracodireito2{
-    position: absolute;
-    margin-left: 25%;
-    margin-top: -2%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgbracodireito2);
-  }
-  
-  #localCorpo16{
-  // #maodireita2{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgmaodireita2);
-  }
-  
-  #localCorpo17{
-  // #pernaesquerda2{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpernaesquerda2);
-  }
-  
-  // #pernadireita2{
-  #localCorpo18{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpernadireita2);
-  }
-  
-  // #peesquerdo2{
-  #localCorpo19{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpeesquerdo2);
-  
-  }
-  
-  // #pedireito2{
-  #localCorpo20{
-    position: absolute;
-    margin-top: -2%;
-    margin-left: 25%;
-    width: 70%;
-    height: 40%;
-    clip-path: url(#svgpedireito2);
-  
-  }
-
-  
+    #localCorpo7{
+      position: absolute; 
+      margin-top: -2%;
+      margin-left: 9%;
+      width: 70%;
+      height: 40%;
+      clip-path: url(#svgpernaesquerda1);
+    }
+    
+    // #pernadireita1{
+      #localCorpo8{
+        position: absolute;
+        margin-top: -2%;
+        margin-left: 9%;
+        width: 70%;
+        height: 40%;
+        clip-path: url(#svgpernadireita1);
+      }
+      
+      // #peesquerdo1{
+        #localCorpo9{
+          position: absolute;
+          margin-top: -2%;
+          margin-left: 9%;
+          width: 70%;
+          height: 40%;
+          clip-path: url(#svgpeesquerdo1);
+          
+        }
+        
+        #localCorpo10{
+          // #pedireito1{
+            position: absolute;
+            margin-top: -2%;
+            margin-left: 9%;
+            width: 70%;
+            height: 40%;
+            clip-path: url(#svgpedireito1);
+            
+          }
+          
+          // #clipped2 {
+            #localCorpo11{
+              position: absolute;
+              margin-top: -2%;
+              margin-left: 25%;
+              width: 70%;
+              height: 40%;
+              clip-path: url(#cab2);
+            }
+            
+            #localCorpo12{ 
+              // #tronco2{ 
+                position: absolute;
+                margin-left: 25%;
+                margin-top: -2%;
+                width: 70%;
+                height: 40%;
+                clip-path: url(#svgtronco2);
+              }
+              
+              // #bracoesquerdo2{
+                #localCorpo13{
+                  position: absolute;
+                  margin-left: 25%;
+                  margin-top: -2%;
+                  width: 70%;
+                  height: 40%;
+                  clip-path: url(#svgbracoesquerdo2);
+                }
+                
+                // #maoesquerda2{
+                  #localCorpo14{
+                    position: absolute;
+                    margin-top: -2%;
+                    margin-left: 25%;
+                    width: 70%;
+                    height: 40%;
+                    clip-path: url(#svgmaoesquerda2);
+                  }
+                  
+                  #localCorpo15{
+                    // #bracodireito2{
+                      position: absolute;
+                      margin-left: 25%;
+                      margin-top: -2%;
+                      width: 70%;
+                      height: 40%;
+                      clip-path: url(#svgbracodireito2);
+                    }
+                    
+                    #localCorpo16{
+                      // #maodireita2{
+                        position: absolute;
+                        margin-top: -2%;
+                        margin-left: 25%;
+                        width: 70%;
+                        height: 40%;
+                        clip-path: url(#svgmaodireita2);
+                      }
+                      
+                      #localCorpo17{
+                        // #pernaesquerda2{
+                          position: absolute;
+                          margin-top: -2%;
+                          margin-left: 25%;
+                          width: 70%;
+                          height: 40%;
+                          clip-path: url(#svgpernaesquerda2);
+                        }
+                        
+                        // #pernadireita2{
+                          #localCorpo18{
+                            position: absolute;
+                            margin-top: -2%;
+                            margin-left: 25%;
+                            width: 70%;
+                            height: 40%;
+                            clip-path: url(#svgpernadireita2);
+                          }
+                          
+                          // #peesquerdo2{
+                            #localCorpo19{
+                              position: absolute;
+                              margin-top: -2%;
+                              margin-left: 25%;
+                              width: 70%;
+                              height: 40%;
+                              clip-path: url(#svgpeesquerdo2);
+                              
+                            }
+                            
+                            // #pedireito2{
+                              #localCorpo20{
+                                position: absolute;
+                                margin-top: -2%;
+                                margin-left: 25%;
+                                width: 70%;
+                                height: 40%;
+                                clip-path: url(#svgpedireito2);
+                                
+                              }
+                              
+                              
