--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -7,64 +7,50 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="tertiary" >
+<ion-content color="tertiary">
   <div id="listAtleta" >
-    <ion-list *ngFor="let atleta of listaAtletas.atleta"  color="tertiary">
+    <div *ngIf="lista_atleta">
+    <ion-list *ngFor="let atleta of lista_atleta" color="tertiary">
       <ion-item (click)='selecionaAtleta(atleta)' color="tertiary" lines="none">
         <ion-label>{{atleta.nome}}</ion-label>
         <ion-note slot="end">{{atleta.clube}}</ion-note>
       </ion-item>
     </ion-list>
-    
+
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button (click)="addNovoAtleta()">
         <ion-icon name="add"></ion-icon>
-      </ion-fab-button> 
+      </ion-fab-button>
     </ion-fab>
   </div>
-  
+</div>
+
   <div id="registraAtleta">
-    
+
     <form [formGroup]="regiOpform">
       <ion-list>
         <ion-label>
           DADOS DO NOVO OPONENTE
         </ion-label>
-        <ion-item id="item_nome" lines="none"> 
-          <ion-input
-          placeholder= "Nome"
-          text-center
-          formControlName="nome"
-          type="text"
-          [class.invalid]="regiOpform.controls['nome'].valid &&
+        <ion-item id="item_nome" lines="none">
+          <ion-input placeholder="Nome" text-center formControlName="nome" type="text" [class.invalid]="regiOpform.controls['nome'].valid &&
           regiOpform.controls['nome'].touched">
-        </ion-input>
-        
-      </ion-item>
-      <ion-item lines="none">
-        <ion-input
-        text-center
-        placeholder="Clube"
-        formControlName="clube"
-        type="text"
-        [class.invalid]="regiOpform.controls['clube'].valid &&
-        regiOpform.controls['clube'].touched"
-        >
-      </ion-input>
-    </ion-item>
-  </ion-list>
-  
-</form>
-<ion-button
-shape="round"
-color="secondary"
-(click)="cadastroAtletaas(regiOpform)"
+          </ion-input>
 
->
-<!-- [disabled]="!registroForm.valid" -->
-Confirmar
-</ion-button>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-input text-center placeholder="Clube" formControlName="clube" type="text" [class.invalid]="regiOpform.controls['clube'].valid &&
+        regiOpform.controls['clube'].touched">
+          </ion-input>
+        </ion-item>
+      </ion-list>
 
-</div>
+    </form>
+    <ion-button shape="round" color="secondary" (click)="cadastroAtletaas(regiOpform)">
+      <!-- [disabled]="!registroForm.valid" -->
+      Confirmar
+    </ion-button>
+
+  </div>
 
 </ion-content>
