Correção dos campos taticamente na tela comportamento-oponente para celulares menores

--- a/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
+++ b/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
@@ -15,7 +15,7 @@
     <ion-label class="label_end"slot="end" >Ousado</ion-label>
   </ion-item>
   <ion-item lines="none" class="item_range"> 
-    <ion-range min="1" max="5" step="1" snaps="true" (ionChange)="segmentconservador_ousado($event)" mode="ios"> 
+    <ion-range value="3" min="1" max="5" step="1" snaps="true" (ionChange)="segmentconservador_ousado($event)" mode="ios"> 
     </ion-range>
     <ion-icon name="help" (click)="help('conservador_ousado')"></ion-icon>
   </ion-item> 
@@ -25,7 +25,7 @@
     <ion-label  class="label_end_medio" slot="end">Constante</ion-label>
   </ion-item>
   <ion-item lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"   (ionChange)="segmentinconstante_constante($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"   (ionChange)="segmentinconstante_constante($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('inconstante_constante')"></ion-icon>
   </ion-item>
@@ -36,7 +36,7 @@
     <ion-label  class="label_end" slot="end">Confiante</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range"> 
-    <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmentinseguro_confiante($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"  (ionChange)="segmentinseguro_confiante($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('inseguro_confiante')"></ion-icon>   
   </ion-item>
@@ -46,7 +46,7 @@
     <ion-label class="label_end_maior" slot="end">Controlado</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"   (ionChange)="segmentintimidado_controlado($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"   (ionChange)="segmentintimidado_controlado($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('intimidado_controlado')"></ion-icon>
   </ion-item>
@@ -56,7 +56,7 @@
     <ion-label class="label_end_maior" slot="end">Respeitosa</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"   (ionChange)="segmentprovocativa_respeitosa($event)" mode="ios"> 
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"   (ionChange)="segmentprovocativa_respeitosa($event)" mode="ios"> 
     </ion-range>    
     <ion-icon name="help" (click)="help('provocativa_respeitosa')"></ion-icon>
   </ion-item>
@@ -66,19 +66,19 @@
     <ion-label  slot="end">Proativa</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmentpassiva_proativa($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"  (ionChange)="segmentpassiva_proativa($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('passiva_proativa')"></ion-icon>     
   </ion-item>
   
   <ion-item lines="none" >
-    <ion-label slot="start">Estrassado</ion-label> 
+    <ion-label slot="start">Estressado</ion-label> 
     <ion-label  slot="end">Calmo</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmentestrassado_calmo($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"  (ionChange)="segmentestressado_calmo($event)" mode="ios">
     </ion-range>
-    <ion-icon name="help" (click)="help('estrassado_calmo')"></ion-icon>     
+    <ion-icon name="help" (click)="help('estressado_calmo')"></ion-icon>     
   </ion-item>
 
   <ion-item lines="none" >
@@ -86,17 +86,17 @@
     <ion-label  slot="end">Alerta</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmentdisperso_alerta($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"  (ionChange)="segmentdisperso_alerta($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('disperso_alerta')"></ion-icon>     
   </ion-item>
 
-  <ion-item lines="none" >
+  <ion-item lines="none" id="item_taticamente" >
     <ion-label slot="start">Taticamente <br> disciplinado</ion-label> 
     <ion-label  slot="end" class="label_end_maior_maior">Taticamente <br> indisciplinado</ion-label>
   </ion-item>
   <ion-item  lines="none" class="item_range">
-    <ion-range min="1" max="5" step="1" snaps="true"  (ionChange)="segmenttaticamenteDisciplinado_taticamenteIndisciplinado($event)" mode="ios">
+    <ion-range value="3" min="1" max="5" step="1" snaps="true"  (ionChange)="segmenttaticamenteDisciplinado_taticamenteIndisciplinado($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('taticamenteDisciplinado_taticamenteIndisciplinado')"></ion-icon>     
   </ion-item>
